# zen

./: .gitignore  README.md  main.js  package-lock.json  package.json
crates/docs/: README.md  themes.md
crates/fs/: Cargo.toml  index.d.ts  index.js  package.json
crates/fs/npm/linux-arm64-gnu/: README.md  package.json
crates/fs/npm/linux-x64-gnu/: README.md  package.json
crates/fs/npm/win32-arm64-msvc/: README.md  package.json
crates/fs/npm/win32-x64-msvc/: README.md  package.json
crates/fs/src/: lib.rs
crates/git/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/git/__test__/: index.spec.mjs
crates/git/docs/: API.md  DEVELOPMENT.md  EXAMPLES.md  IMPLEMENTATION.md  README.md
crates/git/examples/: basic-usage.js  clone-repo.js  file-history.js  find-repo.js
crates/git/src/: lib.rs
crates/mod/: README.md  file_system.js  file_watcher.js  git_utils.js  sessions.js  settings.js  store.js  theme_manager.js  ui_scaling.js
crates/mod/docs/: README.md  file_system.md  git_utils.md  sessions.md  settings.md  store.md  ui_scaling.md
crates/test/: watcher_test.js
crates/ui/: scaling.css  variables.css  welcome.html  zen.css
crates/watcher/: Cargo.toml  index.d.ts  index.js  package.json
crates/watcher/npm/linux-arm64-gnu/: README.md  package.json
crates/watcher/npm/linux-x64-gnu/: README.md  package.json
crates/watcher/npm/win32-arm64-msvc/: README.md  package.json
crates/watcher/npm/win32-x64-msvc/: README.md  package.json
crates/watcher/src/: lib.rs
crates/zen/: preload.js  welcome.js  zen.js
(+8 files in other folders)
