[package]
edition = "2021"
name = "watcher"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt", "async"] }
napi-derive = "2.12.2"
notify = "6.1.1"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
crossbeam-channel = "0.5.8"
parking_lot = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3
